# sieve

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  flake.nix
.github/workflows/: ci.yml
cmake/: docs.cmake  format.cmake  library_and_wasm.cmake  lint.cmake  nix.cmake  testing.cmake
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  index.rst  requirements.txt
include/: bitset_index.h  util.h
resources/: words.txt
src/: bitset_index.cpp  main.cpp  util.cpp  wasm_bindings.cpp
test/: test_sieve.cpp
